--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "tailwindcss": "^3.3.5"
   },
   "dependencies": {
-    "flowbite": "^2.1.1"
+    "flowbite": "^2.1.1",
+    "vercel": "^32.5.5"
   }
 }
